scenarioo-client/app/styles/scenarioo.less
/* ... */
#sc-context-breadcrumbs {
  background-color: #eee;
  width: 100%;
  padding: 5px;
  font-size: 90%;
  color: #555;
  border-top: 1px solid #ccc;
  margin-bottom: 30px;
}

textarea#issueDescription {
  height: 165px;
}

.tool-icon,
.property-icon {
  background-image: url('../images/sketcher-icons-sprite.svg');
  background-repeat: no-repeat;
  width: 50px;
  height: 33px;
  display: block;
}

.tool-icon-default {
  background-position: 50px center;
}

.tool-icon-select {
  background-position: -450px center;
}
.tool-icon-border {
  background-position: 0px center;
}
.tool-icon-rect {
  background-position: -50px center;
}
.tool-icon-note {
  background-position: -100px center;
}
.tool-icon-text {
  background-position: -150px center;
}
.tool-icon-button {
  background-position: -200px center;
}
.tool-icon-highlight {
  background-position: -500px center;
}
.tool-icon-line {
  background-position: -550px center;
}
.tool-icon-arrow {
  background-position: -600px center;
}


.property-icon-front {
  background-position: -400px center;
}
.property-icon-forward {
  background-position: -350px center;
}
.property-icon-backward {
  background-position: -300px center;
}
.property-icon-back {
  background-position: -250px center;
}

#sc-sketcher-save-and-close-button:after {
  content: '';
  display: block;
  clear: both;
  margin-bottom: 10px;
}


/* Diff Viewer */

.progress.sc-diff-changes {
  position: relative;
  height: 25px;
  margin-bottom: 0;
  overflow: hidden;
  max-width:155px;
  border-radius: 5px 5px 5px 5px;
  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
  box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
  background-color: transparent;
  border: solid 1px #EAEAEA;

  .progress-bar {
    float: left;
    width: 0;
    height: 5px;
    font-size: 12px;
    line-height: 55px;
    color: #000000;
    text-align: center;
    -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
    box-shadow: inset 0 -1px 0 rgba(0,0,0,.15);
    -webkit-transition: width .6s ease;
    -o-transition: width .6s ease;
    transition: width .6s ease;
  }

  .progress-bar-default {
    background-color: #f6f6f6;
  }

  .change-rate {
    clear: both;
    font-weight: bold;
    text-align: center;
    color: #333;
    line-height: 19px;
    background-color: #FFFFFF;

    span.added {
      color: #5cb85c;
      font-weight: normal;
      background-color: #FFFFFF;
    }

    span.removed {
      color: #d9534f;
      font-weight: normal;
      background-color: #FFFFFF;
    }
  }
}

.tooltip.diff-icon-tooltip .tooltip-inner {
  white-space: nowrap;
  text-align:left;

  .square {
    display: inline-block;
    width: 10px;
    height: 10px;
    border: 1px solid #CCC;
    margin-right: 3px;
    margin-top: 2px;

    &.changed {
      background-color: #f0ad4e;
    }

    &.added {
      background-color: #5cb85c;
    }

    &.removed {
      background-color: #d9534f;
    }
  }
}

.usecase-table, .scenario-table {
  tr.removed {
    cursor: default;
    background-color: #FDF2F1;
  }

  tr.added {
    background-color: #F8FCF7;
  }
}

.step-view {
  .sc-truncate, h2 {
    line-height: 25px;
    margin-bottom: 0px;
  }

  h3.sc-truncate {
    margin-top: 0px;
    padding-top: 0.8em;
  }

  .diff-info-wrapper {
    float: right;
    width: 70px;
    font-size: 14px;
  }
}

.sc-step-in-overview .removed, .sc-step-in-overview.removed {
  cursor: default;
  background-color: #FDF2F1;
}

.sc-step-in-overview .added, .sc-step-in-overview.added {
  cursor: default;
  background-color: #F8FCF7;
}


#comparison-selection-dropdown {

  & > a {
    white-space: nowrap;
    padding-top: 14px;
    line-height: 40px;
    padding-bottom: 0px;

    .diff-info-wrapper {
      display: inline-block;
      font-size: 14px;
      position: relative;
      bottom: -5px;
      padding-left: 10px;
      width: 90px;

      .progress.sc-diff-changes {
        border-color: #9d9d9d;
        .change-rate {
          color: #9d9d9d;
          background-color: transparent;
        }
      }
    }
  }
  .dropdown-menu {
    .diff-info-wrapper {
      position: absolute;
      top: 4px;
      right: 10px;
      width: 80px;
      font-size: 14px;
    }

    li a {
      line-height: 25px;
      padding-bottom: 5px;
      padding-top: 5px;
      padding-right: 100px;
      position: relative;
    }
  }
}

